# Unity

NativePlugin/GfxUnityPluginCumQtApp/UnityApp/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  UnityApp.sln
NativePlugin/GfxUnityPluginCumQtApp/UnityApp/Assets/: scene.unity
NativePlugin/GfxUnityPluginCumQtApp/UnityApp/Temp/__Backupscenes/: 0.backup
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/: CMakeLists.txt
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/base/: VulkanBuffer.hpp  VulkanDebug.cpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanInitializers.hpp  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanWindow.cpp  VulkanWindow.h  benchmark.hpp  camera.hpp  keycodes.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/binaries/: QtBinaryApp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/data/shaders/dynamicuniformbuffer/: GLSLToSpvText.sh  dynamicUniformBufferShader.h  ubFragmentShader.txt  ubVertexShader.txt
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/data/shaders/triangle/: GLSLToSpv.sh  GLSLToSpvText.sh  triangle.vert  triangle.vert.spv
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyDynamicuniformbuffer/PluginSource/source/: RenderingPlugin.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyDynamicuniformbuffer/QtUnityDynamicUniformBufferImpl/: QtUIVulkanExample.h  dynamicuniformbuffer.cpp  dynamicuniformbuffer.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleCode/: QtUIVulkanExample.h  RenderAPI_VulkanNew.cpp  RenderAPI_VulkanNew.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleCode/Common/: QtUIVulkanExample.h  RenderAPI_Vulkan.cpp  RenderAPI_Vulkan.h  qtUnityTriangle.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleCode/PluginSource/source/: RenderAPI.cpp  RenderAPI.h  RenderAPI_Vulkan.cpp  RenderAPI_Vulkan.h  RenderingPlugin.cpp  VkQtUnityCommon.h  triangleShaders.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleCode/QtAppSource/: RenderAPI_VulkanNew.cpp  RenderAPI_VulkanNew.h  main.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleCode/QtUnityTriangleImpl/: QtUIVulkanExample.h  main.cpp  qtUnityTriangle.cpp  qtUnityTriangle.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleToDynUniform/PluginSource/source/: RenderingPlugin.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleToDynUniform/PluginSource/source/Unity/: IUnityGraphicsVulkan.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/NativeUntyTriangleToDynUniform/QtUnityTriangleImpl/: QtUIVulkanExample.h  qtUnityTriangle.cpp  qtUnityTriangle.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/dynamicuniformbuffer/: dynamicuniformbuffer.cpp  dynamicuniformbuffer.h
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/dynamicuniformbuffer/QtUnityTriangleImpl/: dynamicuniformbuffer.cpp  dynamicuniformbuffer.h  main.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/main/: nativeUnity.cpp
NativePlugin/GfxUnityPluginCumQtApp/VkUnityQtLib/examples/triangle/: triangle.cpp
NativePlugin/UnityAptivNativePluginSimplified/PluginSource/projects/GNUMake/: CMakeLists (copy).txt  CMakeLists.txt  Makefile
NativePlugin/UnityAptivNativePluginSimplified/PluginSource/source/: RenderAPI.cpp  RenderAPI.h  RenderAPI_Vulkan.cpp  RenderingPlugin.cpp
NativePlugin/UnityAptivNativePluginSimplified/UnityProject/Assets/: UseRenderingPlugin.cs
NativePlugin/UnityAptivNativePluginSimplified/UnityProject/ProjectSettings/: ProjectSettings.asset
